; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_utils.c_l2cu_reject_ble_connection.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_utils.c_l2cu_reject_ble_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@L2CAP_CMD_BLE_CREDIT_BASED_CONN_RES_LEN = common dso_local global i32 0, align 4
@L2CAP_CMD_BLE_CREDIT_BASED_CONN_RES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"l2cu_reject_ble_connection - no buffer\00", align 1
@L2CAP_SEND_CMD_OFFSET = common dso_local global i32 0, align 4
@HCI_DATA_PREAMBLE_SIZE = common dso_local global i32 0, align 4
@L2CAP_PKT_OVERHEAD = common dso_local global i32 0, align 4
@L2CAP_CMD_OVERHEAD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @l2cu_reject_ble_connection(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* @L2CAP_CMD_BLE_CREDIT_BASED_CONN_RES_LEN, align 4
  %11 = load i32, i32* @L2CAP_CMD_BLE_CREDIT_BASED_CONN_RES, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32* @l2cu_build_header(i32* %9, i32 %10, i32 %11, i32 %12)
  store i32* %13, i32** %7, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = call i32 @L2CAP_TRACE_WARNING(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  br label %46

17:                                               ; preds = %3
  %18 = load i32*, i32** %7, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  %20 = load i32, i32* @L2CAP_SEND_CMD_OFFSET, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = load i32, i32* @HCI_DATA_PREAMBLE_SIZE, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = load i32, i32* @L2CAP_PKT_OVERHEAD, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = load i32, i32* @L2CAP_CMD_OVERHEAD, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  store i32* %31, i32** %8, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = call i32 @UINT16_TO_STREAM(i32* %32, i32 0)
  %34 = load i32*, i32** %8, align 8
  %35 = call i32 @UINT16_TO_STREAM(i32* %34, i32 0)
  %36 = load i32*, i32** %8, align 8
  %37 = call i32 @UINT16_TO_STREAM(i32* %36, i32 0)
  %38 = load i32*, i32** %8, align 8
  %39 = call i32 @UINT16_TO_STREAM(i32* %38, i32 0)
  %40 = load i32*, i32** %8, align 8
  %41 = load i32, i32* %6, align 4
  %42 = call i32 @UINT16_TO_STREAM(i32* %40, i32 %41)
  %43 = load i32*, i32** %4, align 8
  %44 = load i32*, i32** %7, align 8
  %45 = call i32 @l2c_link_check_send_pkts(i32* %43, i32* null, i32* %44)
  br label %46

46:                                               ; preds = %17, %15
  ret void
}

declare dso_local i32* @l2cu_build_header(i32*, i32, i32, i32) #1

declare dso_local i32 @L2CAP_TRACE_WARNING(i8*) #1

declare dso_local i32 @UINT16_TO_STREAM(i32*, i32) #1

declare dso_local i32 @l2c_link_check_send_pkts(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
